force-app/main/default/objects/Car__c/fields/Available_Exterior_Colors__c.field-meta.xml
<CustomField>
    <fullName>Available_Exterior_Colors__c</fullName>
    <label>Available Exterior Colors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Exterior_Colors</valueSetName>
    </valueSet>
</CustomField>