force-app/main/default/objects/Car__c/fields/Available_Interior_Colors__c.field-meta.xml
<CustomField>
    <fullName>Available_Interior_Colors__c</fullName>
    <label>Available Interior Colors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Interior_Colors</valueSetName>
    </valueSet>
</CustomField>