force-app/main/default/objects/Car__c/fields/Available_Ranges__c.field-meta.xml
<CustomField>
    <fullName>Available_Ranges__c</fullName>
    <label>Available Ranges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Range_Options</valueSetName>
    </valueSet>
</CustomField>